apps/lab/forgejo/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: forgejo
  namespace: forgejo
  annotations:
    link.argocd.argoproj.io/external-link: https://code2.lab.ciliber.to
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: lab-gateway
      namespace: envoy-gateway-system
      sectionName: https-lab
  hostnames:
    - code2.lab.ciliber.to
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: forgejo-http
          port: 3000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: forgejo-public
  namespace: forgejo
  annotations:
    link.argocd.argoproj.io/external-link: https://code.ciliber.to
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: lab-gateway
      namespace: envoy-gateway-system
      sectionName: https-public
  hostnames:
    - code.ciliber.to
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: forgejo-http
          port: 3000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
