apps/lab/forgejo/templates/tcproute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: forgejo-ssh
  namespace: forgejo
spec:
  parentRefs:
    - name: lab-gateway
      namespace: envoy-gateway-system
      sectionName: ssh-alt
  rules:
    - backendRefs:
        - name: forgejo-ssh
          port: 22
